# project_nabu

./: .gitignore  DATASET_SOURCES.md  ENCODING_WORKFLOW.md  README.md  RESEARCH_ROADMAP.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
configs/experiments/: hybrid_model.yaml  sign_transformer.yaml  stroke_lstm.yaml
docs/: ORACC_DATASET.md  _config.yml  architecture.md  encoding-pipeline.md  getting-started.md  index.md  line-detection.md
docs/api/: index.md
examples/: oracc_example.py
scripts/: README_ANALYSIS.md  analyze_cuneiform_coverage.py  analyze_encoding_gaps.py  analyze_hantatallas_databases.py  evaluate.py  generate_all_encodings.py  generate_encoding_template.py  oracc_to_paleocode.py  preprocess.py  query_encoding.py  test_encoding_single.py  train.py  validate_hantatallas_coverage.py  validate_paleocode_coverage.py
src/nabu/: __init__.py
src/nabu/dataloaders/: __init__.py  builders.py  collate.py
src/nabu/datasets/: __init__.py  base.py  cuneiform_dataset.py  oracc_dataset.py  transforms.py
src/nabu/encoding/: README.md  __init__.py  encoding_database.py  encoding_generator.py  glyph_renderer.py  hzl_validator.py  quick_test.py  spatial_analyzer.py  stroke_detector.py  sweep_line_encoder.py  test_pipeline.py  visualizer.py
src/nabu/models/: __init__.py  base.py  embeddings.py  rnn.py  transformer.py
src/nabu/paleocode/: __init__.py  paleocodes.json  unicode_to_paleocode.py
src/nabu/tokenizers/: __init__.py  base.py  hantatallas.py  hybrid_tokenizer.py  paleocode.py  sign_tokenizer.py  stroke_tokenizer.py
